--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,6 +30,19 @@ h2 {
   background-color: #dbdcde; /* light grey */
 }
 
+#portfolio .card-title {
+  color: #1f7798; /* mid-blue */
+  font-size: 1.2rem;
+}
+
+#portfolio .btn:hover {
+  background-color: #1f7798; /* mid-blue */
+}
+
+#portfolio .card-text {
+    min-height: 120px; /* Ensures all cards have the same height */
+}
+
 /* Contact section styles */
 #contact {
   background-color: white;
@@ -43,4 +56,14 @@ h2 {
   background-position: 50% 70%;
   min-height: 500px;
   padding: 5% 7%;
+}
+
+/* Media Queries */
+
+/* Use bootstrap breakpoint for XL screens */
+@media screen and (min-width: 1200px) {
+  /* fixes all portfolio cards being too tall on large screens */
+  #portfolio .card-text {
+    min-height: auto; /* Reset to auto for larger screens */
+  }
 }
