--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,6 +24,17 @@ h2 {
   border-radius: 0;
 }
 
+/* Custom styles for Newsletter button, contact form, send button and modal sign-up button */
+.custom-button {
+    background-color: #1f7798; /* mid-blue */
+    border-color: #1f7798; /* mid-blue */
+}
+
+.custom-button:hover {
+    background-color: #1d6d8a; /* slightly darker mid-blue */
+    border-color: #1d6d8a;
+}
+
 /* About section styles */
 #about {
   background-color: white;
